HELLODATA-1939 - [CSV] add more validation points